<?xml version="1.0" encoding="utf-8"?>

  <ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
	   			android:layout_width="fill_parent"
 				android:layout_height="fill_parent"
				android:fillViewport="true"
				android:gravity="center"
>

	        <LinearLayout
	            xmlns:android="http://schemas.android.com/apk/res/android"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:gravity="center"
	            android:padding="5dip"
	             >

   			            		    
						<ImageView
					        android:id="@+id/image"
					        android:layout_gravity="center_horizontal"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:scaleType="centerInside"
					        android:src="@drawable/stub" 
					        android:contentDescription="@string/detailscontentdescription"
					        android:paddingLeft="5dip"
					        />

							<LinearLayout
							xmlns:android="http://schemas.android.com/apk/res/android"
	   			            android:layout_width="fill_parent"
	   			            android:layout_height="wrap_content"
	   			            android:gravity="center"
	   			            android:orientation="horizontal"
						    >
					
							    <Button
							        android:id="@+id/gallery"
							        style="@style/callmebuttons"
							        android:drawableTop="@drawable/imagebuttongallery"
							        android:text="@string/BUTTON_LABLE_GALLERY"
							    />
																        						
							    <Button
							        android:id="@+id/video"
							        style="@style/callmebuttons"
							        android:drawableTop="@drawable/imagebuttonvideo"
							        android:text="@string/BUTTON_LABLE_VIDEO"
							    />
									    
								<Button
								        android:id="@+id/phone"
								        style="@style/callmebuttons"
								        android:drawableTop="@drawable/imagebuttontelephone"
								        android:text="@string/BUTTON_LABLE_PHONE" 
							        />
				        	</LinearLayout>

							<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
						    android:layout_width="fill_parent"
						    android:layout_height="wrap_content"
						    android:gravity="center"
						    android:orientation="vertical"
   				            android:paddingTop="10dip" 
							>
		            				        					
					        <TextView 
								android:id ="@+id/name_stage"	            
								style="@style/topDetails"
					    	    android:text="@string/NAME_OBSCURED" />
			
				        		    
					        <TextView
					            android:id="@+id/comments"
						        android:layout_width="match_parent"
					   	    	android:layout_height="wrap_content"
					   	    	android:paddingTop="15dip"
					   	    	android:paddingBottom="15dip"
					   	    	android:paddingLeft="0dip"
					   	    	android:paddingRight="10dip"
					   	    	android:text="@string/COMMENTS_OBSCURED" />

					</LinearLayout>
			</LinearLayout>		        
</ScrollView>
	