<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:paddingLeft="1dip"
       android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
       android:orientation="horizontal" >
   

	    <ImageView
	        android:id="@+id/image"
	        android:layout_width="150dip"
	        android:layout_height="100dip"
	        android:scaleType="centerInside"
	        android:contentDescription="@string/maincontentdescription"
	        android:src="@drawable/stub" />


    	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:paddingLeft="5dip"
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
        android:orientation="vertical" >

          <TextView 
			android:id ="@+id/name_stage"	            
			style = "@style/indexnameageregion"
	        android:layout_width="wrap_content"
   	    	android:layout_height="wrap_content"
			android:textColor="@color/color_orange"
			android:textSize="15dip"
    	    android:text="@string/NAME_OBSCURED" />
    	    	    	    
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="wrap_content"
		    android:orientation="horizontal"
		    android:layout_height="wrap_content">
          				        					
	            <TextView
		       		android:id="@+id/region"     
					style = "@style/indexnameageregion"
			        android:layout_width="100dip"
	   	    		android:layout_height="wrap_content"
		        	android:textSize="10dip"
	    	    	android:text="@string/REGION_OBSCURED" />
       		</LinearLayout>
	            	    	
		    <TextView
		        style = "@style/indexcomments"
		        android:id="@+id/comment"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
    	    	android:text="@string/REGION_OBSCURED" />
		    	    
	  </LinearLayout>
    
</LinearLayout>
