<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Demonstrates use of the com.google.android.maps.MapView.
     See corresponding Java code com.example.android.apis.view.MapViewDemo.java. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent"
    android:orientation="vertical" 
    >
    
	    <!-- open layout for photo and stats -->

	    <LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/header"
			android:paddingLeft="3dip"
	        android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	        android:paddingTop="10dip"  
	        android:orientation="horizontal"
	         >
	
		    <ImageView
		        android:id="@+id/image"
		        android:layout_width="100dip"
		        android:layout_height="75dip"
	   		    android:scaleType="centerInside"
		        android:contentDescription="@string/maincontentdescription"
		        android:src="@drawable/stub" />
	
		    	    	    
	    	<LinearLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:paddingLeft="3dip"
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		        android:orientation="vertical" >
	          				        					
		        <TextView 
					android:id ="@+id/name_stage"
					style = "@style/indexnameageregion"
				    android:layout_width="wrap_content"
		   	    	android:layout_height="wrap_content"
					android:textColor="@color/color_orange"
					android:textSize="15dip"
		    	    android:text="@string/NAME_OBSCURED" />

				        				
	            <TextView
		       		android:id="@+id/region"     
					style = "@style/indexnameageregion"
			        android:layout_width="wrap_content"
	   	    		android:layout_height="wrap_content"
	    	    	android:text="@string/REGION_OBSCURED" />


	            <TextView
				        style = "@style/indexcomments"
				        android:id="@+id/comments"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content" 
                           android:singleLine="false"
		                android:maxLines = "4"
		    	    	android:text="@string/NAME_OBSCURED" />
				            	
			</LinearLayout>
					  
		</LinearLayout>    

    <LinearLayout  
        android:layout_height = "wrap_content"
        android:layout_width="fill_parent" 
        android:id="@+id/linearLayout3"
        android:gravity="center"
        android:paddingTop="5dip"  
        android:baselineAligned="true"
        >

        <com.google.android.maps.MapView
		    	android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:state_enabled="true"
		        android:clickable="true"
		        android:apiKey="0EttRVkPlm1KL47oSZcs9G2F7jzgYrjOKgYwtgQ"
				style="@style/mapView"
			 	android:id="@+id/map"/>
		    
    </LinearLayout>
					       		
<!--
	 release key
        android:apiKey="0EttRVkPlm1K_j9pFUhnbyncFG2TPWWEteZPddQ"

	 debug key
 		android:apiKey = "0EttRVkPlm1KL47oSZcs9G2F7jzgYrjOKgYwtgQ" // new key 3/5/2012
-->

</LinearLayout>
